--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,7 +33,7 @@ li{
     padding-top: 30px;
 }
 .c{
-  color:black;
+  color: #000000;
     margin-left: 500px;
     font-size:60px;
     margin-top: 90px;
